--- a/physx/documentation/platformreadme/android/readme_android.html
+++ b/physx/documentation/platformreadme/android/readme_android.html
@@ -30,6 +30,7 @@ content="text/html; charset=iso-8859-1">
 
 	<h4>Generating makefiles:</h4>
 	<ul>
+		<li>Set path to android NDK in a variable PM_ANDROIDNDK_PATH.</li>
 		<li>Solutions are generated through a script in physx root directory: generate_projects.bat</li>
 		<li>Script generate_projects.bat expects a preset name as a parameter, if a parameter is not provided it does list the available presets.</li>
 		<li>Supported presets for android platform are: android.</li>
