--- a/physx/documentation/platformreadme/mac/readme_mac.html
+++ b/physx/documentation/platformreadme/mac/readme_mac.html
@@ -34,7 +34,7 @@ content="text/html; charset=iso-8859-1">
 	<ul>
 		<li>XCode projects are in compiler/mac64</li>
 		<li>Open PhysXSDK.xcodeproj to build the entire SDK source within XCode</li>
-		<li>Build from command line using e.g.: xcodebuild -project PhysX.xcodeproj -alltargets -configuration (debug|checked|profile|release)</li>
+		<li>Build from command line using e.g.: xcodebuild -project PhysXSDK.xcodeproj -alltargets -configuration (debug|checked|profile|release)</li>
 		<li>Select one of the snippet schemes from the drop down list</li>
 		<li>Press "Run" to build and run the selected snippet</li>
 		<li>In order to build and run release mode you need to select "Edit Scheme..." and change the "Build Configuration" to "release".</li>
