--- a/physx/documentation/platformreadme/windows/readme_windows.html
+++ b/physx/documentation/platformreadme/windows/readme_windows.html
@@ -28,6 +28,11 @@ content="text/html; charset=iso-8859-1">
 		<li>Microsoft DirectX SDK June 2010 or later</li>
 	</ul>
 
+	<h4>PhysX GPU Acceleration:</h4>
+	<ul>
+		<li>Requires CUDA 10.0 compatible display driver and CUDA ARCH 3.0 compatible GPU</li> 
+	</ul>
+
 	<h4>Generating solutions for Visual Studio:</h4>
 	<ul>
 		<li>Solutions are generated through a script in physx root directory: generate_projects.bat</li>
